# bingewatcher

./: .gitignore  Cargo.toml  OLD_README.md  README.md  bw.py  series.py
.github/workflows/: release.yml
benches/: bench_series.rs  test_1000_seasons.rs
src/: args.rs  cli.rs  episodate.rs  lib.rs  main.rs  onlineserie.rs  serie.rs  utils.rs
src/serie/: season.rs
