[package]
name = "bw"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.5.9"
home = "0.5.9"
reqwest = { version = "0.11.23", features = ["gzip", "brotli", "h3","multipart"]}
serde = { version = "1.0.203", features = ["derive"] } 
serde_json = "1.0.117"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
